--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 
   <!-- MOBAILE MENU -->
 
-    <div class="menu-container js-menu-container is-open" id="mobile-menu">
+    <div class="menu-container js-menu-container" id="mobile-menu">
         <button class="menu-container-button  js-close-menu " type="button">
           <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
