fixed css mistakes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="page-header">
     <div class="container page-header-container">
       <nav class="page-nav">
-        <a class="logo link" href="./index.html">
+        <a class="logo logo-header link" href="./index.html">
           Web<span class="logo-dark">Studio</span></a>
         <ul class="menu list">
           <li class="menu-item">
@@ -38,7 +38,7 @@
           <li class="mail-contact">
             <a class="contact link contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
+          <li class="phone-contact">
             <a class="contact link contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -133,7 +133,7 @@
             </label>
 
 
-            <label class="modal-form-label-box"> <span class="modal-form-label">Comment</span> 
+            <label class="modal-form-text"> <span class="modal-form-label">Comment</span> 
               <textarea
               class="modal-form-massage"
               name="user_massage" 
